Session Page Development Completed With DB Changes
